--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,3 @@
 = Spring Batch Lightmin Samples
 
-The project contains sample applications to demonstrated the usage of the Spring Batch Lightmin Library.
+The project contains sample applications to demonstrate the usage of the Spring Batch Lightmin Library.
